--- a/deploy/django.yaml
+++ b/deploy/django.yaml
@@ -13,7 +13,6 @@ spec:
   type: LoadBalancer
 
 ---
-
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -22,13 +21,13 @@ metadata:
     app: django
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+  storageClassName: efs-sc
   resources:
     requests:
-      storage: 10Gi
+      storage: 5Gi
 
 ---
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -53,9 +52,7 @@ spec:
           persistentVolumeClaim:
             claimName: django-app-pvc
       containers:
-
-        - image: django-app:latest
-          imagePullPolicy: Never
+        - image: 875086615781.dkr.ecr.eu-west-2.amazonaws.com/django-k8s-app:latest # Change this to your ECR repo for app
           name: app
           ports:
             - containerPort: 8080
@@ -65,13 +62,13 @@ spec:
               mountPath: /vol/web
           env:
             - name: DB_HOST
-              value: django-postgres
+              value: django-k8s-db.chelb620du2o.eu-west-2.rds.amazonaws.com # Change this to your RDS endpoint
             - name: DB_NAME
-              value: djangodb
+              value: djangoproject
             - name: DB_USER
               value: djangouser
             - name: ALLOWED_HOSTS
-              value: '127.0.0.1,localhost'
+              value: "a7c9e85ef89a941f68bd8d8917cd4b7d-1489129437.eu-west-2.elb.amazonaws.com" # Change this to your service host
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
@@ -83,8 +80,7 @@ spec:
                   name: django
                   key: secret
 
-        - image: django-proxy:latest
-          imagePullPolicy: Never
+        - image: 875086615781.dkr.ecr.eu-west-2.amazonaws.com/django-k8s-proxy:latest # Change this to your ECR repo for proxy
           name: proxy
           ports:
             - containerPort: 8000
@@ -94,6 +90,6 @@ spec:
               mountPath: /vol/web
           env:
             - name: APP_HOST
-              value: '127.0.0.1'
+              value: "127.0.0.1"
             - name: APP_PORT
-              value: '8080'
+              value: "8080"
