--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -1,11 +1,10 @@
-
 secretGenerator:
   - name: db-password
     literals:
-      - password=supersecretpasswordhere
+      - password=samplepassword123
   - name: django
     literals:
       - secret=secretkey123
 resources:
-  - postgres.yaml
   - django.yaml
+  - storageclass.yaml
