--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -1,10 +1,11 @@
+
 secretGenerator:
   - name: db-password
     literals:
-      - password=samplepassword123
+      - password=supersecretpasswordhere
   - name: django
     literals:
       - secret=secretkey123
 resources:
+  - postgres.yaml
   - django.yaml
-  - storageclass.yaml
